changes have beend done in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="instructions">
                     <h3>About The Game</h3>
-                    <p>Save The Robbin is a fast-paced cyber-defense game where you protect Robbin from
+                    <p> Arham Save The Robbin is a fast-paced cyber-defense game where you protect Robbin from
                         dangerous viruses and online threats. <br> <br>
     
                         Collect data packets, use firewall boosts,
